Update composer autoload-dev file

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
             "email": "justin@dsgnwrks.pro"
         }
     ],
+	"autoload": {
+		"classmap": [ "PHPUnitHelperAssertionsTrait.php" ]
+	},
     "require": {}
 }
